<resources>
    <string name="app_name">GreenPremium</string>

    <string name="start_screen_title_1">Ваше помещение.</string>
    <string name="start_screen_title_2">В зелени.</string>
    <string name="start_screen_title_3">Попробуйте.</string>
    <string name="reference_start_support">Обратиться в службу поддержки</string>

    <string name="title_auth_1">Вход</string>
    <string name="title_auth_2">Войти</string>

    <string name="fab_complain">Пожаловаться</string>
    <string name="fab_praise">Похвалить нас</string>
    <string name="fab_letter">Написать письмо</string>
    <string name="fab_project">Новый проект</string>

    <string name="input_title_subject">Тема</string>
    <string name="input_tip_message">Сообщение</string>
    <string name="button_title_send">Отправить</string>

    <string name="button_title_demo">Демо-режим</string>
    <string name="button_title_registration">Зарегистрироваться</string>

    <string name="input_title_email">Email</string>
    <string name="input_title_password">Пароль</string>
    <string name="reference_title_forgot_password"><u>Забыли логин или пароль?</u></string>

    <string name="screen_title_plants">Растения</string>
    <string name="screen_title_portfolio">Портфолио</string>
    <string name="screen_title_profile">Кабинет</string>
    <string name="screen_title_profile_2">Личный кабинет</string>
    <string name="screen_title_contacts">Контакты</string>
    <string name="screen_title_map">Карта</string>
    <string name="screen_title_basket">Корзина</string>
    <string name="screen_title_favorites">Избранное</string>

    <string name="title_gallery">Галерея</string>

    <string name="calc_screen_title">Калькулятор сервиса</string>
    <string name="calc_screen_tip_text">Данный расчет дает приблизительную стоимость. После нажатия кнопки запросить КП, в вашем личном кабинете появится коммерческое предложение на обслуживание растений и в ближайшее время с Вами свяжется наш менеджер</string>
    <string name="calc_title_column_plants">Количество растений</string>
    <string name="calc_title_column_pots">Количество кашпо</string>
    <string name="calc_title_row_s1">Растения до 1 метра</string>
    <string name="calc_title_row_s2">Растения от 1 до 1,5 метров</string>
    <string name="calc_title_row_s3">Растения от 1,5 метров</string>
    <string name="calc_title_row_s4">Суккуленты и кактусы</string>
    <string name="calc_title_row_s5">Цветущие растения</string>
    <string name="calc_title_button_request">Запросить</string>

    <string name="delivery_screen_title">Поставка</string>

    <string name="title_height">Высота</string>

    <string name="profile_calc_service">Рассчитать стоимость сервиса</string>
    <string name="profile_label_service_cost">Стоимость обслуживания\nв месяц составляет</string>
    <string name="profile_label_hint_no_events">Ваши покупки появятся\nздесь</string>
    <string name="profile_label_hint_delivery_scheduled">Запланирована поставка\nрастений</string>
    <string name="profile_label_shop">Начать\nпокупки</string>

    <string name="contacts_time_choose">Выбор времени</string>
    <string name="contacts_time_choose_2">Выберите время</string>
    <string name="contacts_meet_date_and_time">Дата и время</string>
    <string name="contacts_schedule_meet">Назначить встречу</string>
    <string name="contacts_message_employee_meeting">Вы можете назначить встречу с одним из наших сотрудников</string>
    <string name="contacts_message_employee_meeting_when_set">У вас уже назначена встреча</string>

    <string name="cart_get_bill">Запросить счёт</string>
    <string name="cart_title_total">Общая стоимость</string>
    <string name="cart_service">Мы можем взять на себя уход за вашими растениями. Стоимость сервиса составит 19 800 ₽ в месяц</string>
    <string name="calc_params_is_not_set_error">Выберите количество растений и кашпо</string>

    <string name="title_today">Сегодня</string>
    <string name="title_ok_1">Готово</string>

    <string name="today">Сегодня</string>

    <string name="favorites_empty">Список избранных растений пуст</string>
    <string name="cart_empty">Список покупок пуст</string>

    <string name="messages_screen_success">Сообщение отправлено</string>
    <string name="messages_screen_add_photo_button_text">+ Добавить фото</string>

    <string name="dialog_please_wait">Пожалуйста, подождите…</string>
    <string name="dialog_on_logout">Вы действительно хотите выйти?</string>

    <string name="dialog_restore_password_hint">Введите email</string>
    <string name="dialog_restore_password_cancel">Отмена</string>
    <string name="dialog_restore_password_send">Отправить</string>
    <string name="dialog_restore_password_title">Восстановление пароля</string>
    <string name="dialog_restore_password_error">Введенный e-mail не найден</string>
    <string name="dialog_restore_password_done">Ссылка для восстановления направлена на вашу почту</string>

    <!-- Validations and errors -->
    <string name="error_empty_field">Заполните поле %1$s</string>
    <string name="error_empty_field_2">Пожалуйста, заполните поле</string>
    <string name="error_wrong_phone">Некорректный номер телефона</string>
    <string name="error_wrong_email">Некорректный email</string>
    <string name="error_wrong_pass">Допустимые символы: a–z, A–Z, 0–9 и @.#$_-</string>
    <string name="error_wrong_double">Не является дробным числом</string>
    <string name="error_wrong_data">Некорректные данные</string>

    <string name="template_s_s">%1$s %2$s</string>
    <string name="template_s_s_n_s_s">%1$s %2$s\n%3$s %4$s</string>

    <!-- Dummy area-->
    <string name="event_dummy_1">Ваш заказ № 23456 сформирован и отправлен</string>
    <string name="lorem_ipsum_short">Sed ut perspiciatis unde omnis iste natus error</string>
    <string name="lorem_ipsum_medium">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <item type="id" name="glide_tag" />

</resources>
