<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:paddingTop="@dimen/space_medium_1">

    <Button
        android:id="@+id/button_bill"
        style="@style/Button.Green"
        android:layout_width="@dimen/card_button_width"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/space_medium_2"
        android:layout_marginLeft="@dimen/space_medium_2"
        android:text="@string/cart_get_bill" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_large_1"
        android:layout_toRightOf="@id/button_bill"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfuitext_regular"
            android:gravity="left"
            android:text="@string/cart_title_total"
            android:textColor="@color/gray_light_1"
            android:textSize="@dimen/font_size_12" />

        <TextView
            android:id="@+id/label_total_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfuitext_bold"
            android:text="33 000 ₽"
            android:textColor="@color/black"
            tools:textSize="@dimen/font_size_18" />

    </LinearLayout>


    <TextView
        android:id="@+id/label_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_bill"
        android:layout_marginBottom="@dimen/space_medium_1"
        android:fontFamily="@font/sfuitext_regular"
        android:gravity="left"
        android:text="@string/cart_service"
        android:textColor="@color/gray_light_1"
        android:textSize="@dimen/font_size_9"
        android:layout_marginLeft="@dimen/space_medium_2"
        android:layout_marginRight="@dimen/space_medium_2" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_plants"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/label_service"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingLeft="@dimen/space_small_3"
        android:paddingRight="@dimen/space_small_3" />

</RelativeLayout>